--- a/environment.yml
+++ b/environment.yml
@@ -55,8 +55,10 @@ dependencies:
   - pyyaml==3.12
   - pyzmq==16.0.2
   - qtconsole==4.3.0
+  - scikit-learn==0.18.2
   - scipy==0.19.1
   - simplegeneric==0.8.1
+  - sklearn==0.0
   - terminado==0.6
   - testpath==0.3.1
   - theano==0.9.0
