--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
 - pip:
   - appnope==0.1.0
   - bleach==2.0.0
+  - cycler==0.10.0
   - decorator==4.0.11
   - entrypoints==0.2.3
   - h5py==2.7.0
@@ -41,20 +42,28 @@ dependencies:
   - jupyter-console==5.1.0
   - jupyter-core==4.3.0
   - keras==2.0.5
+  - keras-vis==0.2.1
   - markupsafe==1.0
+  - matplotlib==2.0.2
   - mistune==0.7.4
   - nbconvert==5.2.1
   - nbformat==4.3.0
+  - networkx==1.11
   - notebook==5.0.0
+  - olefile==0.44
   - pandocfilters==1.4.1
   - pexpect==4.2.1
   - pickleshare==0.7.4
+  - pillow==4.1.1
   - prompt-toolkit==1.0.14
   - ptyprocess==0.5.2
   - pygments==2.2.0
+  - pyparsing==2.2.0
+  - pywavelets==0.5.2
   - pyyaml==3.12
   - pyzmq==16.0.2
   - qtconsole==4.3.0
+  - scikit-image==0.13.0
   - scikit-learn==0.18.2
   - scipy==0.19.1
   - simplegeneric==0.8.1
